# btr-libs

./: LICENSE
ball_detector/: CMakeLists.txt  Findball_detector.cmake
ball_detector/src/: CMakeLists.txt  ballDetector.cpp  ballDetector.h
ball_detector/src/examples/: CMakeLists.txt  ballDetector_test.cpp
bfly_camera/: CMakeLists.txt  Findbfly_camera.cmake
bfly_camera/debug/.svn/: entries
bfly_camera/doc/.svn/: entries
bfly_camera/lib/.svn/: entries
bfly_camera/src/: CMakeLists.txt  bflyCamera.cpp  bflyCamera.h
bfly_camera/src/examples/: CMakeLists.txt  main.cpp
faramotics/: CMakeLists.txt  Findfaramotics.cmake  README.txt  about.txt
faramotics/src/: CMakeLists.txt  dynamicSceneRender.cpp  rangeScan2D.cpp  rangeScan2D.h  rangeSector.cpp  sceneRender.cpp  sceneRender.h
faramotics/src/examples/: CMakeLists.txt  scanVisualizationMain.cpp  timeTestMain.cpp
folder1/: test1.txt
point_tracker/: CMakeLists.txt  Findpoint_tracker.cmake
point_tracker/src/: CMakeLists.txt  pointTracker.cpp  pointTracker.h  trackStamped.cpp  trackStamped.h
point_tracker/src/examples/: CMakeLists.txt  trackStampedTest.cpp  trackerMain.cpp
poseStateTime/: CMakeLists.txt
poseStateTime/debug/.svn/: entries
poseStateTime/debug/.svn/text-base/: exe1.txt.svn-base
poseStateTime/lib/.svn/: entries
poseStateTime/src/: angle.cpp  angle.h  quaternion.cpp  rotation.cpp  rotation.h
poseStateTime/src/examples/: quaternion_test.cpp  rotation_test.cpp
pose_state_time/: CMakeLists.txt  FindposeStateTime.cmake  Findpose_state_time.cmake
pose_state_time/src/: CMakeLists.txt  pose3d.cpp  pose3d.h  quaternion.cpp  quaternion.h  rotation.cpp  rotation.h  timeStamp.cpp  timeStamp.h  vqState.cpp  vqState.h  vqStateTs.cpp  vqStateTs.h  wState.cpp  wState.h
pose_state_time/src/examples/: CMakeLists.txt  pose3d_test.cpp  wState_test.cpp
serial_comm/: CMakeLists.txt  Findserial_comm.cmake
serial_comm/src/: CMakeLists.txt  serialComm.cpp  serialComm.h
serial_comm/src/examples/: CMakeLists.txt  main.cpp  serialCommTest.cpp
serial_comm/src/examples/arduinoSerialTest/: arduinoSerialTest.ino  arduinoSerialTest.ino~
